@@ -3,6 +3,7 @@
 ./Mono.Linker/AssemblyMarker.cs
 ./Mono.Linker/BlacklistStep.cs
 ./Mono.Linker/CleanStep.cs
+./Mono.Linker/CoreAction.cs
 ./Mono.Linker/Driver.cs
 ./Mono.Linker/FieldMarker.cs
 ./Mono.Linker/IStep.cs
